--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^9.1.4",
     "multer": "^2.0.2",
     "node-cron": "^3.0.3",
+    "nodemailer": "^8.0.0",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
