--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,8 @@
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
-    "puppeteer": "^24.36.1"
+    "puppeteer": "^24.36.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
