--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,7 +12,16 @@ JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
 JWT_EXPIRE=7d
 
 # CORS
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:5173
+
+# OAuth Configuration (Required for Google/GitHub login)
+# Get Google credentials: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+# Get GitHub credentials: https://github.com/settings/developers
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
 
 # API Keys for Platform Integration (Add these in Phase 2)
 LEETCODE_SESSION=
