--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,7 @@ PORT=5000
 NODE_ENV=development
 
 # Database
-MONGODB_URI=mongodb+srv://mayankjha8274_db_user:OT3E2JS3XCVbM1gE@cluster0.pqjbj0u.mongodb.net/?appName=Cluster0
+MONGODB_URI=mongodb://localhost:27017/codeverse
 # For production use MongoDB Atlas:
 # MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/codeverse
 
